# CMake-pytania

ModernCalculator/: CMakeLists.txt
ModernCalculator/src/CalculationsHistoryParser/JsonParser/: CMakeLists.txt
ModernCalculator/src/CalculationsHistoryParser/JsonParser/test/: CMakeLists.txt
ModernCalculator/src/CalculatorApp/: CMakeLists.txt
ModernCalculator/src/ExpressionCalculatorWidget/: CMakeLists.txt
ModernCalculator/src/ExpressionParser/test/: CMakeLists.txt
